--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ $RC=function(b,a){if(a=document.getElementById(a))(b=document.getElementById(b))
                             <a href="https://arts.vedicspace.in/#dance" class="text-[#8B4513] hover:text-[#D2691E] transition-colors text-sm tracking-[0.1em] uppercase font-sans">Dance &amp; Movement</a>
                             <a href="https://arts.vedicspace.in/#poetry" class="text-[#8B4513] hover:text-[#D2691E] transition-colors text-sm tracking-[0.1em] uppercase font-sans">Poetry &amp; Story</a>
                             <a href="https://arts.vedicspace.in/#visual" class="text-[#8B4513] hover:text-[#D2691E] transition-colors text-sm tracking-[0.1em] uppercase font-sans">Visual Arts</a>
-                            <a href="https://arts.vedicspace.in/veshagaru" class="text-[#8B4513] hover:text-[#D2691E] transition-colors text-sm tracking-[0.1em] uppercase font-sans">Veshagāraru</a>
+                            <a href="https://arts.vedicspace.in/veshagararu" class="text-[#8B4513] hover:text-[#D2691E] transition-colors text-sm tracking-[0.1em] uppercase font-sans">Veshagāraru</a>
                         </nav>
                     </div>
                 </div>
