--- a/support.html
+++ b/support.html
@@ -1200,40 +1200,40 @@
 <div class="rounded-lg text-card-foreground shadow-2xs border-0 bg-white/80 backdrop-blur-sm text-center" data-v0-t="card">
 <div class="flex flex-col space-y-1.5 p-6">
 <div class="w-32 h-32 bg-gradient-to-br from-[#D2691E] to-[#F4A460] rounded-full mx-auto mb-4 flex items-center justify-center">
-<div class="text-white text-4xl font-serif">Artist 1</div>
+   <img src="./assets/vocals.png" alt="Artist 1" class="w-full h-full object-cover rounded-full" />
 </div>
-<h3 class="font-semibold tracking-tight text-[#8B4513] font-serif text-xl">[Artist Name 1]</h3>
+<h3 class="font-semibold tracking-tight text-[#8B4513] font-serif text-xl">Anjanappa Veshagār</h3>
 <p class="text-sm text-[#8B4513] font-sans">Lead Vocalist &amp; Harmonium</p>
 </div>
 <div class="p-6 pt-0">
-<p class="text-[#8B4513] leading-relaxed font-sans">Master of traditional bhajans with 25+ years of
-                experience in carrying forward the sacred musical traditions.</p>
+<p class="text-[#8B4513] leading-relaxed font-sans">Master of traditional bhajans & abhangs, with 8+ years of
+                experience in carrying forward the sacred musical traditions of Hari-dāsaru.</p>
 </div>
 </div>
 <div class="rounded-lg text-card-foreground shadow-2xs border-0 bg-white/80 backdrop-blur-sm text-center" data-v0-t="card">
 <div class="flex flex-col space-y-1.5 p-6">
 <div class="w-32 h-32 bg-gradient-to-br from-[#8B4513] to-[#D2691E] rounded-full mx-auto mb-4 flex items-center justify-center">
-<div class="text-white text-4xl font-serif">Artist 2</div>
+   <img src="./assets/tabla.png" alt="Artist 1" class="w-full h-full object-cover rounded-full" />
 </div>
-<h3 class="font-semibold tracking-tight text-[#8B4513] font-serif text-xl">[Artist Name 2]</h3>
+<h3 class="font-semibold tracking-tight text-[#8B4513] font-serif text-xl">Basavarāj</h3>
 <p class="text-sm text-[#8B4513] font-sans">Tabla &amp; Percussion</p>
 </div>
 <div class="p-6 pt-0">
 <p class="text-[#8B4513] leading-relaxed font-sans">Rhythmic foundation of the group, bringing the
-                heartbeat of devotion to every sacred performance.</p>
+                heartbeat of devotion to every sacred performance. Basavaraj is an all-rounder, lending his support
+                with tabla, harmonium, as well vocals.</p>
 </div>
 </div>
 <div class="rounded-lg text-card-foreground shadow-2xs border-0 bg-white/80 backdrop-blur-sm text-center" data-v0-t="card">
 <div class="flex flex-col space-y-1.5 p-6">
 <div class="w-32 h-32 bg-gradient-to-br from-[#F4A460] to-[#8B4513] rounded-full mx-auto mb-4 flex items-center justify-center">
-<div class="text-white text-4xl font-serif">Artist 3</div>
+   <img src="./assets/cymbals.png" alt="Artist 1" class="w-full h-full object-cover rounded-full" />
 </div>
-<h3 class="font-semibold tracking-tight text-[#8B4513] font-serif text-xl">[Artist Name 3]</h3>
+<h3 class="font-semibold tracking-tight text-[#8B4513] font-serif text-xl">Manjunāth Veshagār</h3>
 <p class="text-sm text-[#8B4513] font-sans">Supporting Vocals &amp; Manjira</p>
 </div>
 <div class="p-6 pt-0">
-<p class="text-[#8B4513] leading-relaxed font-sans">Harmonious voice that elevates the spiritual
-                atmosphere, specializing in traditional abhangs.</p>
+<p class="text-[#8B4513] leading-relaxed font-sans">With 4-years, of hands-on tāḷa — bringing abhangs to life in rhythm and devotion.</p>
 </div>
 </div>
 </div>
