--- a/veshagararu.html
+++ b/veshagararu.html
@@ -125,7 +125,7 @@
                             </p>
                             <p class="text-[#8B4513] text-lg leading-relaxed mb-12 max-w-lg font-sans">They go from home to home, singing traditional bhajans and abhangs of the dāsās (lineage of poet-saints), delivering spiritual enlightenment in its purest form.</p>
                             <div class="flex flex-col sm:flex-row gap-4">
-                                <a href="https://arts.vedicspace.in/support">
+                                <a href="#support-artists">
                                     <button class="ring-offset-background focus-visible:outline-hidden focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-colors focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 h-10 bg-[#8B4513] hover:bg-[#654321] text-white px-8 py-3 text-sm tracking-[0.1em] uppercase font-sans">
                                         Support These Artists
                                         <svg
@@ -145,7 +145,7 @@
                                         </svg>
                                     </button>
                                 </a>
-                                <a href="https://arts.vedicspace.in/support"></a>
+                                <a href="#sacred-art"></a>
                                 <button class="ring-offset-background focus-visible:outline-hidden focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-colors focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border h-10 border-[#8B4513] text-[#8B4513] hover:bg-[#8B4513] hover:text-white px-8 py-3 text-sm tracking-[0.1em] uppercase bg-transparent font-sans">Experience Their Art</button>
                             </div>
                         </div>
