--- a/veshagararu.html
+++ b/veshagararu.html
@@ -145,8 +145,8 @@
                                         </svg>
                                     </button>
                                 </a>
-                                <a href="#sacred-art"></a>
-                                <button class="ring-offset-background focus-visible:outline-hidden focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-colors focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border h-10 border-[#8B4513] text-[#8B4513] hover:bg-[#8B4513] hover:text-white px-8 py-3 text-sm tracking-[0.1em] uppercase bg-transparent font-sans">Experience Their Art</button>
+                                <a href="#sacred-art">
+                                <button class="ring-offset-background focus-visible:outline-hidden focus-visible:ring-ring inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-colors focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border h-10 border-[#8B4513] text-[#8B4513] hover:bg-[#8B4513] hover:text-white px-8 py-3 text-sm tracking-[0.1em] uppercase bg-transparent font-sans">Experience Their Art</button></a>
                             </div>
                         </div>
                         <div class="relative">
