--- a/veshagararu.html
+++ b/veshagararu.html
@@ -67,9 +67,9 @@
                 <div class="container mx-auto px-6">
                     <div class="flex items-center justify-between">
                         <a class="flex items-center space-x-3" href="https://arts.vedicspace.in/">
-                            <div class="w-8 h-8 bg-[#4a1a4a] rounded-sm flex items-center justify-center">
-                                <div class="w-4 h-4 border border-white/60 rounded-sm"></div>
-                            </div>
+<!--<div class="w-12 h-20 bg-[#4a1a4a] rounded-sm flex items-center justify-center"> -->
+<img src="./assets/the_logo.png" alt="Vedic Space" class="w-12 h-20 object-cover" />
+<!--</div>-->
                             <div>
                                 <span class="text-[#4a1a4a] font-serif text-lg">Vedic Space</span>
                                 <div class="text-[#8B4513] text-xs tracking-[0.2em] uppercase font-sans">Sacred Arts</div>
